--- a/jamsinhs/polls/static/css/loginstyle.css
+++ b/jamsinhs/polls/static/css/loginstyle.css
@@ -9,6 +9,7 @@
     background-position: center;
     background-size: cover;
     position: absolute;
+    overflow: hidden;
 }
 .form-wrap {
     width: 570px;
