Update outdated info
Updated repository link
Added 5th members
Moved third party notice to readme

--- a/jamsinhs/polls/templates/index.html
+++ b/jamsinhs/polls/templates/index.html
@@ -55,7 +55,7 @@
             <p class="lead mb-5">잠신고등학교 학생들의 수과학 활동 신청 및 활동 이수시간을 확인할 수 있는 웹페이지입니다.</p>
             <div class="social-icons">
                 <a class="social-icon" href="https://jamsin.sen.hs.kr/index.do" title="잠신고 홈페이지"><i class="fa fa-home"></i></a>
-                <a class="social-icon" href="https://github.com/Rodela-4/activity-time-tracking-system" title="소스코드"><i class="fab fa-github"></i></a>
+                <a class="social-icon" href="https://github.com/RODELA5/activity-time-tracking-system" title="사이트 소스코드"><i class="fab fa-github"></i></a>
                 <a class="social-icon" href="https://www.facebook.com/jamsin.rodela/" title="로델라 페이스북"><i class="fab fa-facebook-f"></i></a>
                 <a class="social-icon" href="https://www.youtube.com/channel/UCCQvSW1uiWUl4ldF397bfVw" title="과학부 유튜브"><i class="fab fa-youtube"></i></a>
             </div>
@@ -147,22 +147,26 @@
     <!-- MADEBY-->
     <section class="resume-section" id="madeby">
         <div class="resume-section-content">
-            <h2 class="mb-5">MADE By.</h2>
+            <h2 class="mb-5">MADE BY. RODELA</h2>
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    RODELA 2021 
+                    RODELA
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    10120최지승, 10202박성현, 10302김건우, 10322최서영, 10606박명준, 10609이명훈, 10707송현우
-                </li>
-                <li>
-                    20109차인석, 20304임경수, 20306김현지, 20313김인서, 20316김준형, 20317이세연, 20416전진수, 20501오승환
+                    3기
+                    차인석, 임경수, 김현지, 김인서, 김준형, 이세연, 전진수
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    Copyright 2013-2021 Start Bootstrap LLC. Code released under the <a href="https://github.com/StartBootstrap/startbootstrap-resume/blob/master/LICENSE">MIT</a> license.
+                    4기
+                    김건우, 박명준, 박성현, 송현우, 오승환, 이명훈, 최서영, 최지승
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    5기
+                    김민성, 박도현, 박서현, 박지호, 이용목, 이은재, 정현석, 최시헌
                 </li>
             </ul>
         </div>
