--- a/jamsinhs/polls/static/css/loginstyle.css
+++ b/jamsinhs/polls/static/css/loginstyle.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: sans-serif;
 }
+
 .wrap {
     height: 100%;
     width: 100%;
@@ -11,6 +12,7 @@
     position: absolute;
     overflow: hidden;
 }
+
 .form-wrap {
     width: 570px;
     height: 720px;
@@ -20,6 +22,7 @@
     padding: 7.5px;
     overflow: hidden;
 }
+
 .button-wrap {
     width: 345px;
     margin: 52.5px auto;
@@ -27,6 +30,7 @@
     box-shadow: 0 0 900px 13.5px #0e72af;
     border-radius: 45px;
 }
+
 .togglebtn {
     padding: 15px 45px;
     cursor: pointer;
@@ -36,6 +40,7 @@
     position: relative;
     left: 15px
 }
+
 #btn {
     top: 0;
     left: 0;
@@ -46,12 +51,14 @@
     border-radius: 45px;
     transition: .5s;
 }
+
 .input-group {
     top: 270px;
     position: absolute;
     width: 420px;
     transition: .5s;
 }
+
 .input-field {
     width: 100%;
     padding: 15px 0;
@@ -61,6 +68,7 @@
     outline: none;
     background: transparent;
 }
+
 .submit {
     width: 85%;
     padding: 15px 45px;
@@ -73,15 +81,31 @@
     outline: none;
     border-radius: 45px;
 }
+
 span {
     color: #777;
     font-size: 18px;
     bottom: 102px;
     position: absolute;
 }
+
 #login {
     left: 75px;
 }
+
 #register {
     left: 670px;
+}
+
+/* Remove arrows */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
