--- a/jamsinhs/polls/static/css/loginstyle.css
+++ b/jamsinhs/polls/static/css/loginstyle.css
@@ -109,3 +109,8 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+
+.error {
+    margin-top: 15px;
+    font-size: 15px;
+}
