--- a/jamsinhs/polls/templates/index.html
+++ b/jamsinhs/polls/templates/index.html
@@ -156,17 +156,17 @@
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                     3기
-                    차인석, 임경수, 김현지, 김인서, 김준형, 이세연, 전진수
+                    김준형, 전진수, 김인서, 김현지, 임경수, 이세연, 차인석
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                     4기
-                    김건우, 박명준, 박성현, 송현우, 오승환, 이명훈, 최서영, 최지승
+                    최지승, 박성현, 김건우, 박명준, 송현우, 이명훈, 최서영, 오승환
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                     5기
-                    김민성, 박도현, 박서현, 박지호, 이용목, 이은재, 정현석, 최시헌
+                    김민성, 박도현, 박서현, 이용목, 이은재, 정현석, 최시헌, 박지호
                 </li>
             </ul>
         </div>
