Show registration page directly on error (#3)

--- a/jamsinhs/polls/templates/login.html
+++ b/jamsinhs/polls/templates/login.html
@@ -69,4 +69,10 @@
         z.style.left = "165px";
     }
 </script>
+
+<!-- Show register page directly on error (#3) -->
+{% if error2 %}
+    <script>register()</script>
+{% endif %}
+
 {% endblock %}
