--- a/jamsinhs/polls/templates/index.html
+++ b/jamsinhs/polls/templates/index.html
@@ -14,12 +14,12 @@
     {% if user %}
     <a class="navbar-brand js-scroll-trigger" href="/polls/logout/">
         <span class="d-block d-lg-none">Logout</span>
-        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static '/img/jamsin.jpg' %}" title='Logout' /></span>
+        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static '/img/jamsin.jpg' %}" title='{{user.name}}({{user.studentid}})에서 로그아웃' /></span>
     </a>
     {% else %}
     <a class="navbar-brand js-scroll-trigger" href="/polls/login/">
         <span class="d-block d-lg-none">Login</span>
-        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static '/img/jamsin.jpg' %}" title='Login'/></span>
+        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static '/img/jamsin.jpg' %}" title='로그인'/></span>
     </a>
     {% endif %}
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
